projects/skies/k8s/sgp/03-amarr/bastion.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stargate
  namespace: skies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stargate
  template:
    metadata:
      labels:
        app: stargate
    spec:
      nodeSelector:
        skies/node-code: amarr
      containers:
        - name: stargate
          image: ghcr.io/linuxserver/openssh-server:latest
          ports:
            - containerPort: 2222
              name: ssh

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stargate-restrict
  namespace: skies
spec:
  podSelector:
    matchLabels:
      app: stargate
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0 
    - ports:
        - port: 2222
          protocol: TCP
        - port: 30422
          protocol: TCP
  policyTypes:
    - Ingress

---
apiVersion: v1
kind: Service
metadata:
  name: stargate-service
  namespace: skies
spec:
  selector:
    app: stargate
  type: NodePort
  ports:
    - name: ssh
      port: 2222  
      targetPort: 2222
      nodePort: 30422
      protocol: TCP
